[project]
name = "dart-noti"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dart-fss>=0.4.4",
    "python-telegram-bot>=20.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
]

[project.scripts]
dart-noti = "dart_noti.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dart_noti"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
